--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "Blender",
   "private": true,
   "license": "MIT",
+    "engines": {
+    "node": "7.x"
+  },
   "authors": [
     "Sebastian De Deyne <sebastian@spatie.be>",
     "Freek Van der Herten <freek@spatie.be>",
