--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "license": "MIT",
     "engines": {
-    "node": "7.x"
+    "node": "7.x",
+    "npm": "5.x"
   },
   "authors": [
     "Sebastian De Deyne <sebastian@spatie.be>",
